Change ProductDTO to ProductDto
