# impl/src/main/java/com/shop/controller/ProductController.java
@@ -1,7 +1,7 @@
 package com.shop.controller;
 
 import com.shop.api.swagger.controllers.ProductManagementApi;
-import com.shop.api.swagger.models.ProductDTO;
+import com.shop.api.swagger.models.ProductDto;
 import com.shop.service.ProductService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -21,7 +21,7 @@ public class ProductController implements ProductManagementApi {
     }
 
     @Override
-    public ResponseEntity<ProductDTO> get(String id) {
+    public ResponseEntity<ProductDto> get(String id) {
         return ResponseEntity.ok(service.getProduct(id));
     }
 
@@ -32,17 +32,17 @@ public class ProductController implements ProductManagementApi {
     }
 
     @Override
-    public ResponseEntity<ProductDTO> create(ProductDTO productDTO) {
-        return ResponseEntity.ok(service.createProduct(productDTO));
+    public ResponseEntity<ProductDto> create(ProductDto productDto) {
+        return ResponseEntity.ok(service.createProduct(productDto));
     }
 
     @Override
-    public ResponseEntity<ProductDTO> update(String id, ProductDTO productDTO) {
-        return ResponseEntity.ok(service.updateProduct(id, productDTO));
+    public ResponseEntity<ProductDto> update(String id, ProductDto productDto) {
+        return ResponseEntity.ok(service.updateProduct(id, productDto));
     }
 
     @Override
-    public ResponseEntity<List<ProductDTO>> getAllProducts() {
+    public ResponseEntity<List<ProductDto>> getAllProducts() {
         return ResponseEntity.ok(service.getAllProducts());
     }
 }
